--- a/src/app/components/calender/calender.component.html
+++ b/src/app/components/calender/calender.component.html
@@ -1,1 +1,8 @@
-<p>calender works!</p>
+<mat-form-field>
+      <mat-label>Choose a date</mat-label>
+      <input matInput [matDatepicker]="picker">
+      <mat-hint>MM/DD/YYYY</mat-hint>
+      <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+    
