--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,15 +1,10 @@
 @if (configs | async; as config) {
       <mat-card class="example-card">
-          @if (config.hasTitle || config.hasSubTitle) {
+          @if (config.hasTitle) {
               <mat-card-header >
                   @if (config.hasTitle) {
                       <mat-card-title>{{data().title}}</mat-card-title>
-                  }
-      
-                  @if (config.hasSubTitle) {
-                      <mat-card-subtitle>{{data().subTitle}}</mat-card-subtitle>
-                  }
-                      
+                  }                     
               </mat-card-header>
           }
       
